Bug 295868 - next unread navigates into trash
Summary: next unread navigates into trash
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 1.99.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-12 21:03 UTC by Anders Lund
Modified: 2012-03-19 12:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Lund 2012-03-12 21:03:42 UTC
User-Agent:       Mozilla/5.0 (X11; Linux i686) KHTML/4.8.1 (like Gecko) Konqueror/4.8
Build Identifier: 

I use the "+" key to navigate to next unread mail. In kmail 1, this did not navigate into trash, but now it does.

In combination with the huge lag kmail or akonadi have marking messages as read, this often sends me to trash when not desired (the message list still have a blue with inbox(1), even though the last message was changed to read in the gui, so I press "+"), so I have to click my inbox to get back, and wait for several seconds while it groups threads.

The missing ability of the spam filter to mark messages as read in 4.8.1 adds to the problem, but even with unread messages in trash, shouldn't it be left alone?

Reproducible: Always
Comment 1 Laurent Montel 2012-03-19 12:04:00 UTC
Git commit 536300b9e6ae38995402b5b2b237c5d45acfac2c by Montel Laurent.
Committed on 19/03/2012 at 13:03.
Pushed by mlaurent into branch 'master'.

Fix Bug 295868 - next unread navigates into trash

FIXED-IN: 4.8.2

M  +3    -0    mailcommon/foldertreeview.cpp

http://commits.kde.org/kdepim/536300b9e6ae38995402b5b2b237c5d45acfac2c
Comment 2 Laurent Montel 2012-03-19 12:05:40 UTC
Git commit bed3e7c6f2b5977cec17a5a079509e0737c2cffd by Montel Laurent.
Committed on 19/03/2012 at 13:03.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 295868 - next unread navigates into trash

FIXED-IN: 4.8.2
(cherry picked from commit 536300b9e6ae38995402b5b2b237c5d45acfac2c)

Conflicts:

	mailcommon/foldertreeview.cpp

M  +6    -1    mailcommon/foldertreeview.cpp

http://commits.kde.org/kdepim/bed3e7c6f2b5977cec17a5a079509e0737c2cffd
Comment 3 Laurent Montel 2012-03-19 12:08:25 UTC
Git commit d092b79fbc17186156cb02b71b4ff3264fe366d7 by Montel Laurent.
Committed on 19/03/2012 at 13:03.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 295868 - next unread navigates into trash

FIXED-IN: 4.8.2
(cherry picked from commit 536300b9e6ae38995402b5b2b237c5d45acfac2c)

Conflicts:

	mailcommon/foldertreeview.cpp

M  +6    -1    mailcommon/foldertreeview.cpp

http://commits.kde.org/kdepim/d092b79fbc17186156cb02b71b4ff3264fe366d7