Fix Bug 295868 - next unread navigates into trash

FIXED-IN: 4.8.2
BUG: 295868
(cherry picked from commit 536300b9e6ae38995402b5b2b237c5d45acfac2c)

Conflicts:

	mailcommon/foldertreeview.cpp